--- a/index.html
+++ b/index.html
@@ -33,13 +33,22 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>KuryenteKo Mobile Application</h3>
+            <p>A user-friendly electricity bill management system designed to help 
+PALECO consumers better understand and monitor their monthly bills. 
+By integrating with the existing PALECO app, the system provides a 
+clear dashboard showing total bill vs. budget through progress bars and 
+charts, visualizes monthly consumption trends, and breaks down 
+charges such as generation, transmission, distribution, and VAT. With 
+added features like issue reporting, energy awareness tips, and 
+notifications, the system addresses common user frustrations with 
+PALECO’s current app by offering improved UI/UX, transparency in 
+charges, and actionable insights for smarter electricity use.  </p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>Hotel Reservation System</h3>
+            <p>A desktop base system that help hotel & resort staff manage their rooms and reservations.</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
