modify Contact Me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ charges, and actionable insights for smarter electricity use.  </p>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. <br>Email: mahilumalliah002@gmail.com <br> https://github.com/alliah2025/portfolio_MAHILUM.git</p>
     </section>
 
     <footer>
